--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p><img src="../src/img/timelock-logo.png" alt="timelock_timeline.png" /></p>
+                        <p><img src="img/timelock-logo.png" alt="timelock_timeline.png" /></p>
 <h1 id="timelock-cryptographic-service"><a class="header" href="#timelock-cryptographic-service">TimeLock Cryptographic Service</a></h1>
 <p><a href="https://www.timelock.zone/">Timelock.zone</a> aims to serve as a public platform that allows companies and individuals to encrypt data for future decryption with support for various cryptographic systems, including the most popular <a href="https://">Elliptic curves</a>.</p>
 <p>Timelock is being developed by the <a href="https://research.aragon.org/about/">Aragon ZK Research team</a> using Gears, a COSMOS SDK written in <a href="https://www.rust-lang.org/">Rust</a>.</p>
